# cmake_utils

templates/cpp_project/: CMakeLists.txt
